# src/infrastructure/repository/image/load.handler.go
@@ -1,8 +1,11 @@
 package image
 
 import (
+	"bytes"
 	"crypto/tls"
+	"io"
 	"io/ioutil"
+	"mime/multipart"
 	"net/http"
 
 	"github.com/davidbyttow/govips/v2/vips"
@@ -47,5 +50,29 @@ func (image *ImageModel) loadToVips() error {
 	image.Height = imageRef.Height()
 	image.Type = vips.DetermineImageType(image.Buffer)
 	image.Name = "origin"
+	return nil
+}
+
+func (image *ImageModel) loadFileToImage(file *multipart.FileHeader) error {
+	fileContent, err := file.Open()
+	if err != nil {
+		return err
+	}
+	defer fileContent.Close()
+	buf := bytes.NewBuffer(nil)
+	if _, err := io.Copy(buf, fileContent); err != nil {
+		return err
+	}
+	image.Buffer = buf.Bytes()
+
+	imageRef, err := vips.LoadImageFromBuffer(image.Buffer, nil)
+	if err != nil {
+		return err
+	}
+	image.Ref = imageRef
+	image.Width = imageRef.Width()
+	image.Height = imageRef.Height()
+	image.Type = vips.DetermineImageType(image.Buffer)
+	image.Name = file.Filename
 	return nil
 }
